Add onboarding logic for new users in profile.html and enhance Firebase imports in index.html

--- a/public/profile.html
+++ b/public/profile.html
@@ -174,6 +174,11 @@
                 // Start listening for authentication state changes
                 onAuthStateChanged(auth, handleAuthStateChange);
 
+                // --- Onboarding check ---
+                if (window.location.search.includes('onboarding=1')) {
+                    // Wait for auth, then show onboarding modal if needed
+                    window._forceOnboarding = true;
+                }
             } catch (e) {
                 console.error("Initialization failed:", e);
                 document.body.innerHTML = `<div class="p-8 text-center text-red-500"><h1 class="text-2xl font-bold">Fatal Error</h1><p class="mt-2">${e.message}</p></div>`;
@@ -218,6 +223,11 @@
                     profileContent.style.display = 'block';
                     loadingIndicator.classList.add('loader-hidden');
                     initialLoadComplete = true;
+
+                    // --- Onboarding Modal Logic ---
+                    if (window._forceOnboarding || (localData.userProfile && !localData.userProfile.onboardingCompleted)) {
+                        showOnboardingModal();
+                    }
                 }
             }, (error) => {
                 console.error("Snapshot listener error:", error);
@@ -322,6 +332,179 @@
         function showAddRecordModal() { showStatusMessage('Add Record coming soon!'); }
         function showHelpModal() { showStatusMessage('Help coming soon!'); }
         
+        // --- Onboarding Modal (Edit Profile, Unskippable) ---
+        function showOnboardingModal() {
+            // Use the edit profile modal, but make it unskippable
+            const currentProfile = localData.userProfile || {};
+            const user = auth.currentUser;
+            const availableConditions = [
+                'epilepsy', 'autism', 'diabetes', 'mental_health', 'chronic_pain',
+                'heart_condition', 'respiratory', 'autoimmune', 'neurological', 'gastrointestinal'
+            ];
+            const modalContent = `
+                <form id="edit-profile-form" class="space-y-4">
+                    <!-- Main Content Grid -->
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                        <!-- Left Column -->
+                        <div class="space-y-4">
+                            <!-- Personal Information -->
+                            <div class="bg-gray-50 p-4 rounded-lg border">
+                                <h3 class="text-lg font-semibold text-gray-900 mb-3">Personal Information</h3>
+                                <div class="grid grid-cols-1 gap-3">
+                                    <div>
+                                        <label for="display-name" class="block text-sm font-medium text-gray-700 mb-1">Display Name</label>
+                                        <input type="text" id="display-name" 
+                                               value="${currentProfile.displayName || user?.displayName || ''}"
+                                               placeholder="How you'd like to be addressed"
+                                               class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-purple-500 text-sm" required>
+                                    </div>
+                                    <div>
+                                        <label class="block text-sm font-medium text-gray-700 mb-1">Email Address</label>
+                                        <div class="w-full p-2 border border-gray-200 rounded-lg bg-gray-100 text-gray-600 text-sm">
+                                            ${user?.email || 'Not available'}
+                                        </div>
+                                        <p class="text-xs text-gray-500 mt-1">Managed by sign-in provider</p>
+                                    </div>
+                                    <div>
+                                        <label for="date-of-birth" class="block text-sm font-medium text-gray-700 mb-1">Date of Birth (Optional)</label>
+                                        <input type="date" id="date-of-birth" 
+                                               value="${currentProfile.dateOfBirth || ''}"
+                                               class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-purple-500 text-sm">
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Emergency Information -->
+                            <div class="bg-red-50 p-4 rounded-lg border border-red-200">
+                                <h3 class="text-lg font-semibold text-red-900 mb-3">🚨 Emergency Information</h3>
+                                <div class="grid grid-cols-1 gap-3">
+                                    <div>
+                                        <label for="emergency-contact" class="block text-sm font-medium text-gray-700 mb-1">Emergency Contact</label>
+                                        <input type="text" id="emergency-contact" 
+                                               value="${currentProfile.emergencyContact || ''}"
+                                               placeholder="Name and phone number (e.g., John Smith - 07123456789)"
+                                               class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-red-500 focus:border-red-500 text-sm">
+                                    </div>
+                                    <div>
+                                        <label for="medical-notes" class="block text-sm font-medium text-gray-700 mb-1">Important Medical Notes</label>
+                                        <textarea id="medical-notes" rows="2"
+                                                  placeholder="Allergies, current medications, medical conditions, special instructions for emergency responders..."
+                                                  class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-red-500 focus:border-red-500 text-sm">${currentProfile.medicalNotes || ''}</textarea>
+                                <p class="text-xs text-gray-500 mt-1">This information could be vital in an emergency</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Right Column -->
+                    <div class="space-y-4">
+                        <!-- Condition Tracking -->
+                        <div class="bg-blue-50 p-4 rounded-lg border border-blue-200">
+                            <h3 class="text-lg font-semibold text-gray-900 mb-3">🏥 Condition Tracking</h3>
+                            <p class="text-sm text-gray-600 mb-3">Select conditions you'd like to track. This enables personalized symptom questions and better analytics.</p>
+                            <div class="grid grid-cols-2 gap-2 max-h-48 overflow-y-auto custom-scrollbar p-1">
+                                ${availableConditions.map(condition => {
+                                    const isSelected = currentProfile.conditions?.includes(condition) || false;
+                                    const conditionNames = {
+                                        'epilepsy': '🧠 Epilepsy',
+                                        'autism': '🌟 Autism Spectrum',
+                                        'diabetes': '🩸 Diabetes',
+                                        'mental_health': '🧠 Mental Health',
+                                        'chronic_pain': '😣 Chronic Pain',
+                                        'heart_condition': '❤️ Heart Condition',
+                                        'respiratory': '🫁 Respiratory',
+                                        'autoimmune': '🛡️ Autoimmune',
+                                        'neurological': '🧠 Neurological',
+                                        'gastrointestinal': '🫃 Gastrointestinal'
+                                    };
+                                    return `
+                                        <label class="flex items-center p-2 border rounded-lg hover:bg-white cursor-pointer transition-colors text-sm ${isSelected ? 'border-purple-500 bg-white' : 'border-gray-200'}">
+                                            <input type="checkbox" name="conditions" value="${condition}" 
+                                                   ${isSelected ? 'checked' : ''}
+                                                   class="h-4 w-4 text-purple-600 focus:ring-purple-500 border-gray-300 rounded">
+                                            <span class="ml-2 text-sm font-medium text-gray-700">${conditionNames[condition] || condition.replace('_', ' ')}</span>
+                                        </label>
+                                    `;
+                                }).join('')}
+                            </div>
+                        </div>
+                        <!-- Settings & Account Info -->
+                        <div class="bg-gray-50 p-4 rounded-lg border">
+                            <h3 class="text-lg font-semibold text-gray-900 mb-3">🔒 Privacy & Settings</h3>
+                            <div class="grid grid-cols-1 gap-2 mb-4">
+                                <label class="flex items-start p-2 border rounded hover:bg-gray-100 cursor-pointer">
+                                    <input type="checkbox" id="data-sharing" 
+                                           ${currentProfile.dataSharing ? 'checked' : ''}
+                                           class="h-4 w-4 text-purple-600 focus:ring-purple-500 border-gray-300 rounded mt-1">
+                                    <div class="ml-2">
+                                        <span class="text-sm font-medium text-gray-700">Help improve the app</span>
+                                        <p class="text-xs text-gray-500">Share anonymous usage analytics to help development</p>
+                                    </div>
+                                </label>
+                            </div>
+                            <div class="grid grid-cols-2 gap-2 text-sm">
+                                <div class="bg-white p-2 rounded border">
+                                    <p class="font-medium text-gray-700">Account Type</p>
+                                    <p class="text-gray-600 text-xs">${user?.isAnonymous ? 'Guest Account' : 'Registered Account'}</p>
+                                </div>
+                                <div class="bg-white p-2 rounded border">
+                                    <p class="font-medium text-gray-700">Sign-in Method</p>
+                                    <p class="text-gray-600 text-xs">${user?.providerData && user.providerData.some(p => p.providerId && p.providerId.includes('google.com')) ? 'Google SSO' : 'Anonymous'}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Action Buttons -->
+                <div class="flex flex-col sm:flex-row justify-between items-center pt-4 border-t gap-3 mt-4">
+                    <div class="order-2 sm:order-1">
+                        <button type="button" id="delete-account-btn"
+                                class="px-3 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 transition-colors text-sm font-medium" disabled style="opacity:0.5;cursor:not-allowed;">
+                            🗑️ Delete Account
+                        </button>
+                    </div>
+                    <div class="flex space-x-3 order-1 sm:order-2">
+                        <button type="button" class="close-modal-btn px-4 py-2 text-gray-600 bg-gray-200 rounded-lg hover:bg-gray-300 transition-colors font-medium text-sm" disabled style="opacity:0.5;cursor:not-allowed;">
+                            Cancel
+                        </button>
+                        <button type="submit"
+                                class="px-6 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition-colors font-medium text-sm">
+                            💾 Save Profile
+                        </button>
+                    </div>
+                </div>
+            </form>
+        `;
+            // Remove any existing modals
+            modalContainer.innerHTML = '';
+            // Create modal
+            const modal = document.createElement('div');
+            modal.id = 'onboarding-modal';
+            modal.className = 'fixed inset-0 bg-gray-900 bg-opacity-50 flex items-center justify-center p-4 z-50';
+            modal.innerHTML = `<div class="bg-white rounded-xl shadow-2xl p-6 w-full max-w-5xl modal-content">${modalContent}</div>`;
+            modalContainer.appendChild(modal);
+            // No close on backdrop click
+            // Setup form submit
+            modal.querySelector('#edit-profile-form').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const selectedConditions = Array.from(modal.querySelectorAll('input[name="conditions"]:checked')).map(cb => cb.value);
+                if (!localData.userProfile) localData.userProfile = {};
+                localData.userProfile.displayName = modal.querySelector('#display-name').value;
+                localData.userProfile.dateOfBirth = modal.querySelector('#date-of-birth').value;
+                localData.userProfile.emergencyContact = modal.querySelector('#emergency-contact').value;
+                localData.userProfile.medicalNotes = modal.querySelector('#medical-notes').value;
+                localData.userProfile.conditions = selectedConditions;
+                localData.userProfile.dataSharing = modal.querySelector('#data-sharing').checked;
+                localData.userProfile.onboardingCompleted = true;
+                await saveData();
+                // Remove modal and reload profile
+                modal.remove();
+                showStatusMessage('Profile saved! Welcome to the app!', 'success');
+                // Remove onboarding param from URL
+                if (window.location.search.includes('onboarding=1')) {
+                    window.history.replaceState({}, document.title, window.location.pathname);
+                }
+                renderProfile();
+            });
+        }
+
         // --- Setup Event Listeners ---
         function setupEventListeners() {
             document.getElementById('signout-btn').addEventListener('click', () => signOut(auth));
