--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@
         // Firebase Imports
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
         import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, onSnapshot, setDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { getFirestore, doc, onSnapshot, setDoc, deleteDoc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
         // --- Firebase Configuration ---
         const firebaseConfig = typeof userFirebaseConfig !== 'undefined' ? userFirebaseConfig : {};
@@ -279,6 +279,25 @@
                 // Set up Firestore document reference
                 docRef = doc(db, "users", userId);
                 console.log("Document reference created for user:", userId);
+
+                // --- New User Check for Google SSO ---
+                // Only do this for Google SSO (not anonymous)
+                const isGoogleSSO = user.providerData && user.providerData.some(p => p.providerId && p.providerId.includes('google.com'));
+                if (isGoogleSSO) {
+                    try {
+                        const userDocSnap = await getDoc(docRef);
+                        if (!userDocSnap.exists()) {
+                            // New user, redirect to onboarding
+                            window.location.href = '/profile.html?onboarding=1';
+                            return;
+                        }
+                    } catch (err) {
+                        console.error('Error checking user doc existence:', err);
+                        showStatusMessage('Error checking user profile.', 'error');
+                        loadingIndicator.classList.add('loader-hidden');
+                        return;
+                    }
+                }
 
                 // Show loading and start listening
                 loadingIndicator.classList.remove('loader-hidden');
