--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
     <div class="container mx-auto p-4 md:p-8 max-w-7xl">
 
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-900">Visit Tracker</h1>
+            <h1 class="text-4xl font-bold text-gray-900">myHealthTracker</h1>
             <p class="text-lg text-gray-600 mt-2">Check off hospitals and ambulance trusts you've visited.</p>
 
             <div
@@ -1685,7 +1685,7 @@
                 <div class="space-y-4">
                     <div class="text-center pb-3 border-b">
                         <h3 class="text-xl font-semibold text-gray-900">Help & Support</h3>
-                        <p class="text-sm text-gray-600 mt-1">Everything you need to know about Visit Tracker</p>
+                        <p class="text-sm text-gray-600 mt-1">Everything you need to know about myHealthTracker</p>
                     </div>
                     
                     <!-- Main Content Grid -->
