--- a/public/profile.html
+++ b/public/profile.html
@@ -46,7 +46,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
-                    <a href="/" class="text-xl font-bold text-gray-900">Visit Tracker</a>
+                    <a href="/" class="text-xl font-bold text-gray-900">myHealthTracker</a>
                     <span class="ml-2 text-sm text-gray-500">/ Profile</span>
                 </div>
                 <div class="flex items-center space-x-4">
