--- a/public/profile.html
+++ b/public/profile.html
@@ -457,7 +457,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Action Buttons -->
+                <!-- Action Buttons (moved outside grid) -->
                 <div class="flex flex-col sm:flex-row justify-between items-center pt-4 border-t gap-3 mt-4">
                     <div class="order-2 sm:order-1">
                         <button type="button" id="delete-account-btn"
@@ -625,7 +625,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Action Buttons -->
+                <!-- Action Buttons (moved outside grid) -->
                 <div class="flex flex-col sm:flex-row justify-between items-center pt-4 border-t gap-3 mt-4">
                     <div class="order-2 sm:order-1">
                         <button type="button" id="delete-account-btn"
