Refactor showSymptomPromptModal function definition in index.html for improved readability and consistency with existing code structure.

--- a/public/index.html
+++ b/public/index.html
@@ -2002,7 +2002,8 @@
         window.showAddRecordModal = showAddRecordModal;
 
         // --- Symptom Prompt Modal for New Record ---
-        function showSymptomPromptModal(recordData, onComplete) {
+ // --- Symptom Prompt Modal for New Record ---
+ function showSymptomPromptModal(recordData, onComplete) {
             const userConditions = localData.userProfile?.conditions || [];
             if (!userConditions.length) {
                 // No conditions tracked, skip symptom prompt
